[package]
name = "libdsync-hasezoey"
description = "Generate rust structs & query functions from diesel schema files."
version = "0.2.0"
readme = "README.md"
repository = "https://github.com/hasezoey/dsync"
license = "MIT OR Apache-2.0"
keywords = ["diesel", "crud", "database", "codegen", "generation"]
categories = ["command-line-utilities", "development-tools", "development-tools::ffi", "web-programming"]
authors = ["Haris <4259838+Wulf@users.noreply.github.com>", "hasezoey <hasezoey@gmail.com>"]
edition = "2021"

[features]
default = ["tsync", "backtrace"]
tsync = []
async = []
backtrace = []

[dependencies]
syn = { version = "1", features = ["extra-traits", "full"] }
thiserror = "1.0"
proc-macro2 = "1"
heck = "0.4" # same case converter diesel uses

[lib]
name = "dsync_hasezoey"
path = "src/lib.rs"
